# gtris

./: .gitignore  BrickViewer.cc  BrickViewer.h  HighscoresManager.cc  HighscoresManager.h  HighscoresWindow.ui  HscEntryDialog.ui  INSTALL  Makefile  Makefile.in  TetrisGameProcess.cc  TetrisGameProcess.h  aclocal.m4  configure.in  devel.make  devmake  gpl-notice.txt  gtkbrickviewer.cc  gtkbrickviewer.h  gtris.pro  gtris.spec.in  help.xpm  highscores.xpm  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  mkdepend  msgbox.cc  msgbox.h  new.xpm  options.cc  options.h  options.xpm  pause.xpm  registry.cc  registry.h  run.xpm  stop.xpm  title.xpm  (+4 more)
